styles.css
*{
    margin: 0;
    padding: 0;
}

.image{
    position: absolute;
}
    

#imageSignUp{
    width:30vw;
    height:100vh;
    position: absolute;
}


.logo{
    display: flex;
    width: 30vw;
    height: 20vh;
    background-color: black;
    opacity: 0.8;
    position: relative;
    top:40vh; 
    justify-content: center;
}

.g20-logo{
    align-self: center;
    width: 15vw;
    height: 20vh;
}

.content1{
    position: relative;
    left:30vw ;
    background-color: rgb(255, 231, 186);
    height: 30vh;
}

.signUpContent1{
    position: relative;
    font-size: 2vw;
    top: 22vh;
    left: 2vw;
}




.content3{
    position: relative;
    left:30vw ;
    background-color: rgb(156, 193, 156);
    height: 30vh;
}

.createAccount{
    position: relative;
    left: 2vw;
    top: 2vh;
    background-image: linear-gradient(to top, green , orange 50%);
    height: 5vh;
    width: 10vw;
    border-radius: 10px;
    color: white;
    font-size: 1vw;
}

.alreadyLoginText{
    position: relative;
    left:2vw;
    top: 2vh;
    font-size: .8vw;
}

.logIn{
    color: white;
    font-size: 1vw;
}

a{
    text-decoration: none;
}


.content2{
    position: relative;
    left:30vw ;
    background-color:white;
    height: 40vh;
    display: flex;
    flex-direction: row;
    gap:5vw;
    overflow: hidden;
}

.container1,.container2{
    position: relative;
    left: 2vw;
    top: 5vh;
    display: flex;  
    flex-direction: column;
    gap:4vh
}



label{
    font-size: 0.7vw;
}

input{
    height: 4vh;
    width: 15vw;
}


.firstNameContainer,.emailContainer,.lastNameContainer,.phoneNumberContainer,
.passwordContainer,.confirmPasswordContainer{
    display: flex;
    flex-direction: column;
}

